--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "rm -rf ./_site && npx @11ty/eleventy"
   },
   "devDependencies": {
-    "@11ty/eleventy": "3.0.0"
+    "@11ty/eleventy": "3.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "5.0.0"
   }
 }
